# opendiscovery

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile.python  README.md  docker-compose.yaml  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/src/cli/: __init__.py  database.py  tenant.py  test_data.py  user.py
client/: README.md  config.py  gui.py  main.py  nmap_scan.py  pyproject.toml  scanner_token.py
client/tests/: test_nmap_scan.py
configs/: natsio.conf
configs/postgres/: init.sql
docs/: c4_container.puml  c4_context.puml  database.md  database.puml
frontend/opendiscovery-frontend/: .dockerignore  Dockerfile  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/opendiscovery-frontend/app/: app.vue
frontend/opendiscovery-frontend/app/components/: AppLogo.vue
frontend/opendiscovery-frontend/app/components/auth/: LoginView.vue
frontend/opendiscovery-frontend/app/components/dashboard/: DashboardHeader.vue  DashboardTabs.vue  HighchartsChart.client.vue  HostDiscoveryDashboard.vue  HostTable.vue  ScanJobSettings.vue  ScannerSettings.vue
frontend/opendiscovery-frontend/app/composables/: useOpenDiscoveryDashboard.ts
frontend/opendiscovery-frontend/app/pages/: index.vue
libs/core/: pyproject.toml
libs/core/src/core/config/: __init__.py
libs/core/src/core/database/: __init__.py  factories.py  fields.py  migrations.py  seed_data.py
libs/core/src/core/database/models/: __init__.py  asset.py  discovery.py  scan_job.py  scanner.py  tenant.py  user.py
libs/core/src/core/utils/: __init__.py  password.py
migrations/models/: 0001_initial_schema.py  0_20260524161607_init.py
services/auth/: README.md  pyproject.toml
services/auth/src/auth/: __init__.py
services/backend/: README.md  pyproject.toml
services/backend/src/backend/: __init__.py  database.py  nats.py
services/backend/src/backend/api/: __init__.py  auth.py  hosts.py  scan_jobs.py  scanners.py  system.py
services/result_collector/: README.md  pyproject.toml
services/result_collector/src/result_collector/: payloads.py  service.py
services/result_collector/tests/: test_result_collector.py
