[project]
name = "opendiscovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [
    "client",
]

[tool.aerich]
tortoise_orm = "core.database.migrations.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
app = "models"

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.auth]
workspace = true

[tool.uv.sources.result-collector]
workspace = true

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
    "client",
    "cli",
]

[dependency-groups]
dev = [
    "aerich>=0.8.1",
    "pytest>=8.4.2",
    "ruff>=0.14.6",
]
