[project]
name = "opendiscovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [
    "client",
]

[tool.ruff]
target-version = "py314"

[tool.tortoise]
tortoise_orm = "core.database.migrations.TORTOISE_ORM"

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.auth]
workspace = true

[tool.uv.sources.result-collector]
workspace = true

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
    "client",
    "cli",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=8.4.2",
    "ruff>=0.14.6",
]
