[project]
name = "cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["core"]

[tool.hatch.build.targets.wheel]
packages = ["src/cli"]

[project.scripts]
cli = "cli:app"

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
