[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "pydantic-settings>=2.14.0",
    "tortoise-orm[asyncpg]>=1.1.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
