[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["core", "nats-callout", "nats-py", "pyjwt>=2.12.1"]

[project.scripts]
auth = "auth:main"

[tool.hatch.build.targets.wheel]
packages = ["src/auth"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
