[project]
name = "result-collector"
version = "0.1.0"
description = "Collect scanner results from NATS and persist discovered assets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["core", "nats-py"]

[project.scripts]
result-collector = "result_collector.service:main"

[tool.hatch.build.targets.wheel]
packages = ["src/result_collector"]

[tool.uv.sources]
core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
